# tool_calling_llm

./: .gitignore  LICENSE  README.md  ToolCallingLLM-Tutorial.ipynb  pyproject.toml
src/tool_calling_llm/: __init__.py  tool_calling_llm.py
src/tool_calling_llm_klcoder/: tool_calling_llm.py
tests/: test_litellm_functions.py  test_ollama_functions.py
